--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
           </div>
           <div class="row">
             <span class="label">Дресс‑код:</span>
-            <span>Любое — ты всегда супер красивая</span>
+            <span>Любое - ты всегда супер красивая</span>
           </div>
           <div class="row">
             <span class="label">Настроение:</span>
@@ -418,7 +418,7 @@
           </div>
           <div class="row">
             <span class="label">Время:</span>
-            <span>Вечер — точное узнаешь в этот день :)</span>
+            <span>Вечер - точное узнаешь в этот день :)</span>
           </div>
         </div>
 
@@ -487,3 +487,4 @@
   </script>
 </body>
 </html>
+
