--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
           </div>
           <div class="row">
             <span class="label">Дресс‑код:</span>
-            <span>Любое — ты всегда супер красивая</span>
+            <span>Любое - ты всегда супер красивая</span>
           </div>
           <div class="row">
             <span class="label">Настроение:</span>
@@ -419,7 +419,7 @@
           </div>
           <div class="row">
             <span class="label">Время:</span>
-            <span>Вечер — точное узнаешь в этот день :)</span>
+            <span>Вечер - точное узнаешь в этот день :)</span>
           </div>
         </div>
 
@@ -527,3 +527,4 @@
 
 </body>
 </html>
+
